--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -1,6 +1,6 @@
 // variables colores
-$body-bc: #DFF2DE;
+$body-bc: #FBEFEF;
 $link-nav-card: #2E6953;
 $boton-card: #4faf8b;
-$tipografia-h1: #3e7e65;
+$tipografia-h1: #D34E4E;
 $primary:#F3F2E8;
