--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #DFF2DE;
+  background-color: #FBEFEF;
 }
 
 header {
@@ -29,11 +29,11 @@ main {
   text-align: center;
 }
 main h1 {
-  color: #3e7e65;
+  color: #D34E4E;
 }
 main p {
   font-family: "Libre Baskerville", serif;
-  color: #F69489;
+  color: #F5AFAF;
   margin: 10px;
   font-size: 1.2rem;
   font-weight: bolder;
@@ -44,7 +44,7 @@ main section div img {
   height: 40%;
 }
 main h2 {
-  color: #FCB871;
+  color: #FD7979;
 }
 main div ul {
   list-style-position: inside;
@@ -56,7 +56,7 @@ main div ul {
 main div ul li {
   text-align: left;
   font-weight: bold;
-  color: #4d4646;
+  color: #edaaba;
   margin: 0.3rem 0;
 }
 main .cards-container {
@@ -103,7 +103,7 @@ main .contenedor-servicios {
   margin: auto;
 }
 main .contenedor-servicios .card {
-  background: #DFF2DE;
+  background: #FBEFEF;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(150, 99, 2, 0.48);
@@ -120,29 +120,35 @@ main .contenedor-servicios button a {
   color: white;
   text-decoration: none;
 }
-main .section-sobremi, main .contenedor-sobremi {
+main .section-sobremi,
+main .contenedor-sobremi {
   display: flex;
   justify-content: space-between;
   margin: 10px;
 }
-main .section-sobremi img, main .contenedor-sobremi img {
+main .section-sobremi img,
+main .contenedor-sobremi img {
   width: 35%;
   height: auto;
 }
-main .section-sobremi-dos, main .contenedor-sobremi-dos {
+main .section-sobremi-dos,
+main .contenedor-sobremi-dos {
   display: flex;
   justify-content: space-between;
   flex-direction: row-reverse;
   margin-top: 20px;
   margin: 10px;
 }
-main .section-sobremi-dos .texto-dos, main .contenedor-sobremi-dos .texto-dos {
+main .section-sobremi-dos .texto-dos,
+main .contenedor-sobremi-dos .texto-dos {
   margin-top: 3rem;
 }
-main .section-sobremi-dos .texto-dos p, main .contenedor-sobremi-dos .texto-dos p {
+main .section-sobremi-dos .texto-dos p,
+main .contenedor-sobremi-dos .texto-dos p {
   margin-bottom: 5rem;
 }
-main .section-sobremi-dos img, main .contenedor-sobremi-dos img {
+main .section-sobremi-dos img,
+main .contenedor-sobremi-dos img {
   width: 30%;
   height: auto;
 }
@@ -165,7 +171,8 @@ main .contacto-container .contacto-card label {
   font-weight: 600;
   margin-top: 15px;
 }
-main .contacto-container .contacto-card input, main .contacto-container .contacto-card textarea {
+main .contacto-container .contacto-card input,
+main .contacto-container .contacto-card textarea {
   width: 100%;
   padding: 12px;
   margin-top: 5px;
@@ -198,21 +205,179 @@ main .contacto-container .contacto-card button :hover {
   background: #57a15a;
 }
 
-footer {
+footer .redes {
+  margin-top: 5rem;
+}
+footer ul {
+  list-style: none;
+}
+footer .example-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer .example-2 .icon-content {
+  margin: 0 10px;
+  position: relative;
+}
+footer .example-2 .icon-content .tooltip {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 5px;
+  opacity: 0;
+  visibility: hidden;
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+footer .example-2 .icon-content:hover .tooltip {
+  opacity: 1;
+  visibility: visible;
+  top: -50px;
+}
+footer .example-2 .icon-content a {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  color: #4d4d4d;
+  background-color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+footer .example-2 .icon-content a:hover {
+  box-shadow: 3px 2px 45px 0px rgba(0, 0, 0, 0.12);
+}
+footer .example-2 .icon-content a svg {
+  position: relative;
+  z-index: 1;
+  width: 30px;
+  height: 30px;
+}
+footer .example-2 .icon-content a:hover {
+  color: white;
+}
+footer .example-2 .icon-content a .filled {
+  position: absolute;
+  top: auto;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background-color: #000;
+  transition: all 0.3s ease-in-out;
+}
+footer .example-2 .icon-content a:hover .filled {
+  height: 100%;
+}
+footer .example-2 .icon-content a[data-social=whatsapp] .filled,
+footer .example-2 .icon-content a[data-social=whatsapp] ~ .tooltip {
+  background-color: #128c7e;
+}
+footer .example-2 .icon-content a[data-social=facebook] .filled,
+footer .example-2 .icon-content a[data-social=facebook] ~ .tooltip {
+  background-color: #3b5998;
+}
+footer .example-2 .icon-content a[data-social=instagram] .filled,
+footer .example-2 .icon-content a[data-social=instagram] ~ .tooltip {
+  background: linear-gradient(45deg, #405de6, #5b51db, #b33ab4, #c135b4, #e1306c, #fd1f1f);
+}
+footer .example-2 .icon-content a[data-social=youtube] .filled,
+footer .example-2 .icon-content a[data-social=youtube] ~ .tooltip {
+  background-color: #ff0000;
+}
+
+/* From Uiverse.io by DavidTM96 */
+.form {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  font-family: inherit;
+  gap: 50px;
+  padding-inline: 10em;
+  padding-bottom: 2em;
+  background-color: #171717;
+  border-radius: 20px;
+}
+
+.form-heading {
   text-align: center;
+  margin: 2em;
+  color: #64ffda;
+  font-size: 2em;
+  background-color: transparent;
+  align-self: center;
 }
-footer .redes a {
-  display: inline-block;
-  margin: 0 10px;
-  text-decoration: none;
+
+.form-field {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+  border-radius: 10px;
+  padding: 2em;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: #171717;
+  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
 }
-footer .redes a img {
-  display: inline-block;
-  margin: 0 10px;
-  text-decoration: none;
-  width: 70px;
-  height: 70px;
-  margin: 20px;
+
+.input-field {
+  background: none;
+  border: none;
+  outline: none;
+  width: 100%;
+  color: #ccd6f6;
+  padding-inline: 1em;
+}
+
+.sendMessage-btn {
+  cursor: pointer;
+  margin-bottom: 3em;
+  padding: 1em;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: #64ffda;
+  font-weight: bold;
+  outline: 1px solid #64ffda;
+  transition: all ease-in-out 0.3s;
+}
+
+.sendMessage-btn:hover {
+  transition: all ease-in-out 0.3s;
+  background-color: #64ffda;
+  color: #000;
+  cursor: pointer;
+  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+}
+
+.form-card1 {
+  background-image: linear-gradient(163deg, #64ffda 0%, #64ffda 100%);
+  border-radius: 22px;
+  transition: all 0.3s;
+}
+
+.form-card1:hover {
+  box-shadow: 0px 0px 30px 1px rgba(100, 255, 218, 0.3);
+}
+
+.form-card2 {
+  border-radius: 0;
+  transition: all 0.2s;
+}
+
+.form-card2:hover {
+  transform: scale(0.98);
+  border-radius: 20px;
 }
 
 @media screen and (max-width: 767px) {
