mejorando la tarjeta de contacto

--- a/sass/utilities/_mixin.scss
+++ b/sass/utilities/_mixin.scss
@@ -9,7 +9,7 @@
 
 @mixin p{
     font-family: "Libre Baskerville", serif;
-    color: #F5AFAF;
+    color: #FD7979;
     margin: 10px;
     font-size: 1.2rem;
     font-weight: bolder;
