--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,10 +30,11 @@ main {
 }
 main h1 {
   color: #D34E4E;
+  margin-top: 2rem;
 }
 main p {
   font-family: "Libre Baskerville", serif;
-  color: #F5AFAF;
+  color: #FD7979;
   margin: 10px;
   font-size: 1.2rem;
   font-weight: bolder;
@@ -44,7 +45,7 @@ main section div img {
   height: 40%;
 }
 main h2 {
-  color: #FD7979;
+  color: #628141;
 }
 main div ul {
   list-style-position: inside;
@@ -56,7 +57,7 @@ main div ul {
 main div ul li {
   text-align: left;
   font-weight: bold;
-  color: #edaaba;
+  color: #8BAE66;
   margin: 0.3rem 0;
 }
 main .cards-container {
@@ -75,50 +76,116 @@ main .cards-container .card {
   margin-top: 20px;
 }
 main .cards-container .card h3 {
-  color: orangered;
+  color: #EE6983;
   margin-bottom: 10px;
 }
 main .cards-container .card p {
-  color: #605959;
+  color: #73AF6F;
   font-size: 14px;
   line-height: 1.4;
 }
 main .cards-container .card button {
-  margin-top: 15px;
-  background: #68b36b;
-  border: none;
-  padding: 10px 18px;
-  border-radius: 20px;
-  font-size: 14px;
-}
-main .cards-container .card button a {
+  font-size: 12px;
+  padding: 1em 2.7em;
+  font-weight: 500;
+  background: #1f2937;
   color: white;
-  text-decoration: none;
+  border: none;
+  position: relative;
+  overflow: hidden;
+  border-radius: 5em;
+  cursor: pointer;
+}
+main .cards-container .card .gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 0.6em;
+  margin-top: -0.25em;
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+}
+main .cards-container .card .label {
+  position: relative;
+  top: -1px;
+}
+main .cards-container .card .transition {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-duration: 500ms;
+  background-color: rgba(16, 185, 129, 0.6);
+  border-radius: 9999px;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+main .cards-container .card button:hover .transition {
+  width: 25em;
+  height: 10em;
+}
+main .cards-container .card button:active {
+  transform: scale(0.97);
 }
 main .contenedor-servicios {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   width: 90%;
-  margin: auto;
+  margin-top: 2rem;
 }
-main .contenedor-servicios .card {
-  background: #FBEFEF;
+main .contenedor-servicios .card-servicios {
+  background: #F3F2E8;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(150, 99, 2, 0.48);
 }
 main .contenedor-servicios button {
-  margin-top: 15px;
-  background: #68b36b;
-  border: none;
-  padding: 10px 18px;
-  border-radius: 20px;
-  font-size: 14px;
-}
-main .contenedor-servicios button a {
+  font-size: 12px;
+  padding: 1em 2.7em;
+  font-weight: 500;
+  background: #1f2937;
   color: white;
-  text-decoration: none;
+  border: none;
+  position: relative;
+  overflow: hidden;
+  border-radius: 5em;
+  cursor: pointer;
+}
+main .contenedor-servicios .gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 0.6em;
+  margin-top: -0.25em;
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+}
+main .contenedor-servicios .label {
+  position: relative;
+  top: -1px;
+}
+main .contenedor-servicios .transition {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-duration: 500ms;
+  background-color: rgba(16, 185, 129, 0.6);
+  border-radius: 9999px;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+main .contenedor-servicios button:hover .transition {
+  width: 25em;
+  height: 10em;
+}
+main .contenedor-servicios button:active {
+  transform: scale(0.97);
 }
 main .section-sobremi,
 main .contenedor-sobremi {
@@ -152,57 +219,82 @@ main .contenedor-sobremi-dos img {
   width: 30%;
   height: auto;
 }
-main .contacto-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 80%;
-}
-main .contacto-container .contacto-card {
-  flex: 1;
-  background-color: #e6f7e6;
-  padding: 30px;
-  border-radius: 15px;
-  box-shadow: 0 2px 5px rgba(150, 99, 2, 0.48);
-  margin: 10px;
-}
-main .contacto-container .contacto-card label {
-  display: block;
-  font-weight: 600;
-  margin-top: 15px;
-}
-main .contacto-container .contacto-card input,
-main .contacto-container .contacto-card textarea {
-  width: 100%;
-  padding: 12px;
-  margin-top: 5px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  font-size: 15px;
-}
-main .contacto-container .contacto-card .radio-group {
+main .form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 12px;
+  align-self: center;
+  font-family: inherit;
+  width: 100%;
+  gap: 25px;
+  padding-inline: 15em;
+  background-color: #171717;
+  border-radius: 20px;
 }
-main .contacto-container .contacto-card .radio-group .radio-option {
+main .form-heading {
+  text-align: center;
+  margin: 1em;
+  color: #64ffda;
+  font-size: 2em;
+  background-color: transparent;
+  align-self: center;
+}
+main .form-field {
   display: flex;
   align-items: center;
-}
-main .contacto-container .contacto-card button {
-  margin-top: 20px;
+  justify-content: center;
   width: 100%;
-  padding: 15px;
-  background: #68b36b;
+  gap: 0.5em;
+  border-radius: 10px;
+  padding: 1em;
   border: none;
-  font-size: 16px;
-  color: whitesmoke;
-  border-radius: 8px;
-  cursor: pointer;
+  outline: none;
+  color: white;
+  background-color: #171717;
+  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
 }
-main .contacto-container .contacto-card button :hover {
-  background: #57a15a;
+main .input-field {
+  background: none;
+  border: none;
+  outline: none;
+  width: 100%;
+  color: #ccd6f6;
+  padding-inline: 1em;
+}
+main .sendMessage-btn {
+  cursor: pointer;
+  margin-bottom: 3em;
+  padding: 1em;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: #64ffda;
+  font-weight: bold;
+  outline: 1px solid #64ffda;
+  transition: all ease-in-out 0.3s;
+}
+main .sendMessage-btn:hover {
+  transition: all ease-in-out 0.3s;
+  background-color: #64ffda;
+  color: #000;
+  cursor: pointer;
+  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+}
+main .form-card1 {
+  background-image: linear-gradient(163deg, #64ffda 0%, #64ffda 100%);
+  border-radius: 22px;
+  transition: all 0.3s;
+}
+main .form-card1:hover {
+  box-shadow: 0px 0px 30px 1px rgba(100, 255, 218, 0.3);
+}
+main .form-card2 {
+  border-radius: 0;
+  transition: all 0.2s;
+}
+main .form-card2:hover {
+  transform: scale(0.98);
+  border-radius: 20px;
 }
 
 footer .redes {
@@ -291,93 +383,6 @@ footer .example-2 .icon-content a[data-social=instagram] ~ .tooltip {
 footer .example-2 .icon-content a[data-social=youtube] .filled,
 footer .example-2 .icon-content a[data-social=youtube] ~ .tooltip {
   background-color: #ff0000;
-}
-
-/* From Uiverse.io by DavidTM96 */
-.form {
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  font-family: inherit;
-  gap: 50px;
-  padding-inline: 10em;
-  padding-bottom: 2em;
-  background-color: #171717;
-  border-radius: 20px;
-}
-
-.form-heading {
-  text-align: center;
-  margin: 2em;
-  color: #64ffda;
-  font-size: 2em;
-  background-color: transparent;
-  align-self: center;
-}
-
-.form-field {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5em;
-  border-radius: 10px;
-  padding: 2em;
-  border: none;
-  outline: none;
-  color: white;
-  background-color: #171717;
-  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
-}
-
-.input-field {
-  background: none;
-  border: none;
-  outline: none;
-  width: 100%;
-  color: #ccd6f6;
-  padding-inline: 1em;
-}
-
-.sendMessage-btn {
-  cursor: pointer;
-  margin-bottom: 3em;
-  padding: 1em;
-  border-radius: 10px;
-  border: none;
-  outline: none;
-  background-color: transparent;
-  color: #64ffda;
-  font-weight: bold;
-  outline: 1px solid #64ffda;
-  transition: all ease-in-out 0.3s;
-}
-
-.sendMessage-btn:hover {
-  transition: all ease-in-out 0.3s;
-  background-color: #64ffda;
-  color: #000;
-  cursor: pointer;
-  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
-}
-
-.form-card1 {
-  background-image: linear-gradient(163deg, #64ffda 0%, #64ffda 100%);
-  border-radius: 22px;
-  transition: all 0.3s;
-}
-
-.form-card1:hover {
-  box-shadow: 0px 0px 30px 1px rgba(100, 255, 218, 0.3);
-}
-
-.form-card2 {
-  border-radius: 0;
-  transition: all 0.2s;
-}
-
-.form-card2:hover {
-  transform: scale(0.98);
-  border-radius: 20px;
 }
 
 @media screen and (max-width: 767px) {
