--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,6 +28,7 @@ main {
 
     h1 {
         color: $tipografia-h1;
+        margin-top: 2rem;
     }
 
     p {
@@ -46,7 +47,7 @@ main {
     }
 
     h2 {
-        color: #FD7979;
+        color: #628141;
     }
 
     div {
@@ -60,7 +61,7 @@ main {
             li {
                 text-align: left;
                 font-weight: bold;
-                color: #edaaba;
+                color: #8BAE66;
                 margin: 0.3rem 0;
             }
         }
@@ -83,30 +84,71 @@ main {
             margin-top: 20px;
 
             h3 {
-                color: orangered;
+                color: #EE6983;
                 margin-bottom: 10px;
             }
 
             p {
-                color: #605959;
+                color: #73AF6F;
                 font-size: 14px;
                 line-height: 1.4;
             }
 
+            // estilos de boton
             button {
-                margin-top: 15px;
-                background: #68b36b;
+                font-size: 12px;
+                padding: 1em 2.7em;
+                font-weight: 500;
+                background: #1f2937;
+                color: white;
                 border: none;
-                padding: 10px 18px;
-                border-radius: 20px;
-                font-size: 14px;
-
-                a {
-                    color: white;
-                    text-decoration: none;
-
-                }
+                position: relative;
+                overflow: hidden;
+                border-radius: 5em;
+                cursor: pointer;
             }
+
+            .gradient {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                left: 0;
+                top: 0;
+                border-radius: 0.6em;
+                margin-top: -0.25em;
+                background-image: linear-gradient(rgba(0, 0, 0, 0),
+                        rgba(0, 0, 0, 0),
+                        rgba(0, 0, 0, 0.3));
+            }
+
+            .label {
+                position: relative;
+                top: -1px;
+            }
+
+            .transition {
+                transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+                transition-duration: 500ms;
+                background-color: rgba(16, 185, 129, 0.6);
+                border-radius: 9999px;
+                width: 0;
+                height: 0;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+            }
+
+            button:hover .transition {
+                width: 25em;
+                height: 10em;
+            }
+
+            button:active {
+                transform: scale(0.97);
+            }
+
+
         }
     }
 
@@ -116,28 +158,67 @@ main {
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
         width: 90%;
-        margin: auto;
+        margin-top: 2rem;
 
-        .card {
-            background: $body-bc;
+        .card-servicios {
+            background: $primary;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 2px 5px rgba(150, 99, 2, 0.48);
-
         }
 
+        // estilos de boton
         button {
-            margin-top: 15px;
-            background: #68b36b;
+            font-size: 12px;
+            padding: 1em 2.7em;
+            font-weight: 500;
+            background: #1f2937;
+            color: white;
             border: none;
-            padding: 10px 18px;
-            border-radius: 20px;
-            font-size: 14px;
+            position: relative;
+            overflow: hidden;
+            border-radius: 5em;
+            cursor: pointer;
+        }
 
-            a {
-                color: white;
-                text-decoration: none;
-            }
+        .gradient {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            border-radius: 0.6em;
+            margin-top: -0.25em;
+            background-image: linear-gradient(rgba(0, 0, 0, 0),
+                    rgba(0, 0, 0, 0),
+                    rgba(0, 0, 0, 0.3));
+        }
+
+        .label {
+            position: relative;
+            top: -1px;
+        }
+
+        .transition {
+            transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+            transition-duration: 500ms;
+            background-color: rgba(16, 185, 129, 0.6);
+            border-radius: 9999px;
+            width: 0;
+            height: 0;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        button:hover .transition {
+            width: 25em;
+            height: 10em;
+        }
+
+        button:active {
+            transform: scale(0.97);
         }
 
     }
@@ -182,65 +263,92 @@ main {
 
     //estilos de contacto
     // contenedor general
-    .contacto-container {
+    .form {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        align-self: center;
+        font-family: inherit;
+        width: 100%;
+        gap: 25px;
+        padding-inline: 15em;
+        background-color: #171717;
+        //background-color: #0a192f;
+        border-radius: 20px;
+    }
+
+    .form-heading {
+        text-align: center;
+        margin: 1em;
+        color: #64ffda;
+        font-size: 2em;
+        background-color: transparent;
+        align-self: center;
+    }
+
+    .form-field {
+        display: flex;
         align-items: center;
-        width: 80%;
+        justify-content: center;
+        width: 100%;
+        gap: 0.5em;
+        border-radius: 10px;
+        padding: 1em;
+        border: none;
+        outline: none;
+        color: white;
+        background-color: #171717;
+        box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+    }
 
-        .contacto-card {
-            flex: 1;
-            background-color: #e6f7e6;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 2px 5px rgba(150, 99, 2, 0.48);
-            margin: 10px;
+    .input-field {
+        background: none;
+        border: none;
+        outline: none;
+        width: 100%;
+        color: #ccd6f6;
+        padding-inline: 1em;
+    }
 
-            label {
-                display: block;
-                font-weight: 600;
-                margin-top: 15px;
-            }
+    .sendMessage-btn {
+        cursor: pointer;
+        margin-bottom: 3em;
+        padding: 1em;
+        border-radius: 10px;
+        border: none;
+        outline: none;
+        background-color: transparent;
+        color: #64ffda;
+        font-weight: bold;
+        outline: 1px solid #64ffda;
+        transition: all ease-in-out 0.3s;
+    }
 
-            input,
-            textarea {
-                width: 100%;
-                padding: 12px;
-                margin-top: 5px;
-                border: 1px solid #ccc;
-                border-radius: 8px;
-                font-size: 15px;
+    .sendMessage-btn:hover {
+        transition: all ease-in-out 0.3s;
+        background-color: #64ffda;
+        color: #000;
+        cursor: pointer;
+        box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+    }
 
-            }
+    .form-card1 {
+        background-image: linear-gradient(163deg, #64ffda 0%, #64ffda 100%);
+        border-radius: 22px;
+        transition: all 0.3s;
+    }
 
-            .radio-group {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 12px;
+    .form-card1:hover {
+        box-shadow: 0px 0px 30px 1px rgba(100, 255, 218, 0.3);
+    }
 
-                .radio-option {
-                    display: flex;
-                    align-items: center;
-                }
-            }
+    .form-card2 {
+        border-radius: 0;
+        transition: all 0.2s;
+    }
 
-            button {
-                margin-top: 20px;
-                width: 100%;
-                padding: 15px;
-                background: #68b36b;
-                border: none;
-                font-size: 16px;
-                color: whitesmoke;
-                border-radius: 8px;
-                cursor: pointer;
-
-                :hover {
-                    background: #57a15a;
-                }
-            }
-        }
+    .form-card2:hover {
+        transform: scale(0.98);
+        border-radius: 20px;
     }
 }
 
@@ -359,90 +467,3 @@ footer {
 }
 
 // estilos de tarjeta de contacto
-/* From Uiverse.io by DavidTM96 */
-.form {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    font-family: inherit;
-    gap: 50px;
-    padding-inline: 10em;
-    padding-bottom: 2em;
-    background-color: #171717;
-    //background-color: #0a192f;
-    border-radius: 20px;
-}
-
-.form-heading {
-    text-align: center;
-    margin: 2em;
-    color: #64ffda;
-    font-size: 2em;
-    background-color: transparent;
-    align-self: center;
-}
-
-.form-field {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.5em;
-    border-radius: 10px;
-    padding: 2em;
-    border: none;
-    outline: none;
-    color: white;
-    background-color: #171717;
-    box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
-}
-
-.input-field {
-    background: none;
-    border: none;
-    outline: none;
-    width: 100%;
-    color: #ccd6f6;
-    padding-inline: 1em;
-}
-
-.sendMessage-btn {
-    cursor: pointer;
-    margin-bottom: 3em;
-    padding: 1em;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    color: #64ffda;
-    font-weight: bold;
-    outline: 1px solid #64ffda;
-    transition: all ease-in-out 0.3s;
-}
-
-.sendMessage-btn:hover {
-    transition: all ease-in-out 0.3s;
-    background-color: #64ffda;
-    color: #000;
-    cursor: pointer;
-    box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
-}
-
-.form-card1 {
-    background-image: linear-gradient(163deg, #64ffda 0%, #64ffda 100%);
-    border-radius: 22px;
-    transition: all 0.3s;
-}
-
-.form-card1:hover {
-    box-shadow: 0px 0px 30px 1px rgba(100, 255, 218, 0.3);
-}
-
-.form-card2 {
-    border-radius: 0;
-    transition: all 0.2s;
-}
-
-.form-card2:hover {
-    transform: scale(0.98);
-    border-radius: 20px;
-}
