--- a/sass/layout/_mq-movil.scss
+++ b/sass/layout/_mq-movil.scss
@@ -52,6 +52,8 @@
                 margin-bottom: 20px;
             }
         }
-
+        .form{
+            padding-inline: 2rem;
+        }
     }
 }
