creo haber finalizado todo

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,7 +28,8 @@ main {
 
     h1 {
         color: $tipografia-h1;
-        margin-top: 2rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
 
     p {
@@ -36,7 +37,6 @@ main {
     }
 
     section {
-
         div {
             img {
                 width: 40%;
@@ -57,7 +57,6 @@ main {
             display: inline-block;
             padding: 0;
             margin: 0 auto;
-
             li {
                 text-align: left;
                 font-weight: bold;
