--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,7 +30,8 @@ main {
 }
 main h1 {
   color: #D34E4E;
-  margin-top: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 main p {
   font-family: "Libre Baskerville", serif;
@@ -455,6 +456,15 @@ footer .example-2 .icon-content a[data-social=youtube] ~ .tooltip {
   }
   main .contenedor-sobremi-dos .texto-dos p {
     margin-bottom: 2rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 }
 
