--- a/sass/layout/_mq-desktop.scss
+++ b/sass/layout/_mq-desktop.scss
@@ -2,5 +2,11 @@
 
 
 @media screen and (min-width: 1024px) {
-    
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
 }
